--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aor-json-rest-client": "^2.1.0",
+    "prop-types": "^15.6.2",
+    "ra-data-json-server": "^2.4.1",
+    "ra-data-simple-rest": "^2.4.1",
+    "ra-input-rich-text": "^2.4.2",
     "react": "^16.6.1",
+    "react-admin": "^2.4.1",
     "react-dom": "^16.6.1",
     "react-scripts": "2.1.1"
   },
